ROS2-PX4-Workspace/log/build_2023-06-17_13-13-52/px4_ros_mas_com/stdout_stderr.log
running egg_info
writing ../../build/px4_ros_mas_com/px4_ros_mas_com.egg-info/PKG-INFO
writing dependency_links to ../../build/px4_ros_mas_com/px4_ros_mas_com.egg-info/dependency_links.txt
writing entry points to ../../build/px4_ros_mas_com/px4_ros_mas_com.egg-info/entry_points.txt
writing requirements to ../../build/px4_ros_mas_com/px4_ros_mas_com.egg-info/requires.txt
writing top-level names to ../../build/px4_ros_mas_com/px4_ros_mas_com.egg-info/top_level.txt
reading manifest file '../../build/px4_ros_mas_com/px4_ros_mas_com.egg-info/SOURCES.txt'
writing manifest file '../../build/px4_ros_mas_com/px4_ros_mas_com.egg-info/SOURCES.txt'
running build
running build_py
running install
running install_lib
byte-compiling /home/vasco/MEIA-PROJ4/ROS2-PX4-Workspace/install/px4_ros_mas_com/lib/python3.8/site-packages/px4_ros_mas_com/single_drone_liftoff.py to single_drone_liftoff.cpython-38.pyc
  File "/home/vasco/MEIA-PROJ4/ROS2-PX4-Workspace/install/px4_ros_mas_com/lib/python3.8/site-packages/px4_ros_mas_com/single_drone_liftoff.py", line 74
    if self.reached_height not self.reached_goal and self.validate_goal_pos(self.goal_position[0], self.goal_position[1], self.current_position[0], self.current_position[1]):
                               ^
SyntaxError: invalid syntax

running install_data
running install_egg_info
removing '/home/vasco/MEIA-PROJ4/ROS2-PX4-Workspace/install/px4_ros_mas_com/lib/python3.8/site-packages/px4_ros_mas_com-0.0.0-py3.8.egg-info' (and everything under it)
Copying ../../build/px4_ros_mas_com/px4_ros_mas_com.egg-info to /home/vasco/MEIA-PROJ4/ROS2-PX4-Workspace/install/px4_ros_mas_com/lib/python3.8/site-packages/px4_ros_mas_com-0.0.0-py3.8.egg-info
running install_scripts
Installing drone_liftoff script to /home/vasco/MEIA-PROJ4/ROS2-PX4-Workspace/install/px4_ros_mas_com/lib/px4_ros_mas_com
Installing drone_offboard_control script to /home/vasco/MEIA-PROJ4/ROS2-PX4-Workspace/install/px4_ros_mas_com/lib/px4_ros_mas_com
Installing listener_drone_pos script to /home/vasco/MEIA-PROJ4/ROS2-PX4-Workspace/install/px4_ros_mas_com/lib/px4_ros_mas_com
Installing single_drone_liftoff script to /home/vasco/MEIA-PROJ4/ROS2-PX4-Workspace/install/px4_ros_mas_com/lib/px4_ros_mas_com
writing list of installed files to '/home/vasco/MEIA-PROJ4/ROS2-PX4-Workspace/build/px4_ros_mas_com/install.log'
